Mon Jan 31 16:29:20 2000  Marcel Bosc  <bosc@ceic.com>

	* htword/WordBitCompress.cc: fixed endian bug in compression

Sat Jan 29 21:14:03 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/parser.cc (score): Change config.Value (which returns
	int) to config.Double to preserve accuracy of attributes.

	* htcommon/defaults.cc: Updated documentation for attributes now
	allowing regex, search_algorithms (for new fuzzy) and added
	documentation for the overlooked remove_unretrieved_urls.
	
	* htdoc/*.html: Updated copyright notice for 2000, changed footer
	to use CVS's magic Date keyword. Regenerated documentation from
	defaults changes.

Sat Jan 29 16:32:08 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* contrib/htdig-3.1.4.spec, contrib/htdig-3.1.4-conf.patch: Remove
	these since they don't apply to the 3.2.x releases.

	* htfuzzy/Synonym.cc (openIndex): Change database format from
	DB_BTREE to DB_HASH--no reason for the synonym database to be a
	btree. This was probably overlooked when I switched the rest of
	the fuzzy databases over to DB_HASH.

Sat Jan 29 05:34:26 2000  Loic Dachary  <loic@ceic.com>

	* htword/WordKey.h (UnpackNumber): Very nasty bug. Optimization
	  dated Dec 29 broke endianess on Solaris. Restore previous version.

Fri Jan 28 18:17:08 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/Configuration.h (struct ConfigDefaults): Add version and
	category fields for more accurate documentation.

	* htcommon/defaults.cc: Add blank category fields and start
	filling in version field. Killed modification_time_is_now_attribute.

	* htdig/Document.cc (Document): Kill attribute
	modification_time_is_now since it can cause more harm than good. 
	
	* htnet/HtHTTP.cc (ParseHeader): Ditto.	

	* htdoc/cf_generate.pl: Added support for new version and category
	fields. Currently category does nothing, but it could split the
	documentation into categories.

Sat Jan 29 01:37:45 2000  Loic Dachary  <loic@ceic.com>
