@@ -1,3 +1,8 @@
+Tue Feb  1 10:24:19 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htsearch/parser.cc (score): fix up score calculations for
+	correctness and efficiency.
+
 Mon Jan 31 16:29:20 2000  Marcel Bosc  <bosc@ceic.com>
 
 	* htword/WordBitCompress.cc: fixed endian bug in compression
